// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TrackMemory draws a dot that matches the snapshot 1`] = `
<div
  class="timelineTrackMemoryGraphDot"
  style="left: 20px; top: 2.697563250235465px; background-color: rgb(215, 110, 0);"
/>
`;

exports[`TrackMemory has a tooltip that matches the snapshot 1`] = `
<div
  class="timelineTrackMemoryTooltip"
>
  <div
    class="timelineTrackMemoryTooltipLine"
  >
    <span
      class="timelineTrackMemoryTooltipNumber"
    >
      0B
    </span>
    relative memory at this time
  </div>
  <div
    class="timelineTrackMemoryTooltipLine"
  >
    <span
      class="timelineTrackMemoryTooltipNumber"
    >
      2B
    </span>
    memory range in graph
  </div>
  <div
    class="timelineTrackMemoryTooltipLine"
  >
    <span
      class="timelineTrackMemoryTooltipNumber"
    >
      36
    </span>
    allocations and deallocations since the previous sample
  </div>
</div>
`;

exports[`TrackMemory has a tooltip that matches the snapshot for counts equalling zero 1`] = `
<div
  class="timelineTrackMemoryTooltip"
>
  <div
    class="timelineTrackMemoryTooltipLine"
  >
    <span
      class="timelineTrackMemoryTooltipNumber"
    >
      0B
    </span>
    relative memory at this time
  </div>
  <div
    class="timelineTrackMemoryTooltipLine"
  >
    <span
      class="timelineTrackMemoryTooltipNumber"
    >
      2B
    </span>
    memory range in graph
  </div>
</div>
`;

exports[`TrackMemory matches the 2d canvas draw snapshot 1`] = `
Array [
  Array [
    "clearRect",
    0,
    0,
    80,
    25,
  ],
  Array [
    "set lineWidth",
    2,
  ],
  Array [
    "set lineJoin",
    "bevel",
  ],
  Array [
    "set strokeStyle",
    "#ff9400",
  ],
  Array [
    "set fillStyle",
    "#ff940088",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    22.809689638253786,
  ],
  Array [
    "lineTo",
    10,
    13.109212153841828,
  ],
  Array [
    "lineTo",
    20,
    2.626831448142319,
  ],
  Array [
    "lineTo",
    30,
    1,
  ],
  Array [
    "lineTo",
    40,
    9.7244191403193,
  ],
  Array [
    "lineTo",
    50,
    20.778898146210928,
  ],
  Array [
    "lineTo",
    60,
    24,
  ],
  Array [
    "lineTo",
    70,
    16.42625851218512,
  ],
  Array [
    "lineTo",
    80,
    16.42625851218512,
  ],
  Array [
    "stroke",
  ],
  Array [
    "lineTo",
    80,
    25,
  ],
  Array [
    "lineTo",
    0,
    25,
  ],
  Array [
    "fill",
  ],
  Array [
    "clearRect",
    0,
    0,
    80,
    10,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    1,
    1,
  ],
]
`;

exports[`TrackMemory matches the component snapshot 1`] = `
<div
  class="timelineTrackMemory"
  style="height: 40px; --graph-height: 25px; --markers-height: 15px;"
>
  <div
    class="timelineMarkers timelineMarkersMemory selected"
    data-testid="TimelineMarkersMemory"
  >
    <div
      class="react-contextmenu-wrapper"
    >
      <div>
        <canvas
          class="timelineMarkersCanvas"
          height="10"
          width="80"
        />
      </div>
    </div>
  </div>
  <div
    class="timelineTrackMemoryGraph"
  >
    <div>
      <canvas
        class="timelineTrackMemoryCanvas"
        height="25"
        width="80"
      />
    </div>
    <div
      class="timelineEmptyThreadIndicator"
    />
  </div>
</div>
`;
